--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.0
   url_launcher: ^6.0.20
   flutter_native_splash: ^2.4.2
   # The following adds the Cupertino Icons font to your application.
