--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.0
+  table_calendar: ^3.0.9
   url_launcher: ^6.0.20
   flutter_native_splash: ^2.4.2
   # The following adds the Cupertino Icons font to your application.
