로그인화면

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,11 +3,12 @@ plugins {
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
+    id 'com.google.gms.google-services'
 }
 
 android {
     namespace = "com.example.pruge2024"
-    compileSdk = flutter.compileSdkVersion
+    compileSdk = 34
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
@@ -24,8 +25,8 @@ android {
         applicationId = "com.example.pruge2024"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
+        minSdk = 23
+        targetSdk = 33
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
@@ -41,4 +42,21 @@ android {
 
 flutter {
     source = "../.."
+}
+
+dependencies {
+    // Firebase BoM (Bill of Materials)을 사용하여 Firebase 버전 관리
+    implementation platform('com.google.firebase:firebase-bom:33.5.1')
+
+    // Firebase Analytics 의존성 추가 (필요한 Firebase 서비스 추가)
+    implementation 'com.google.firebase:firebase-analytics'
+
+    // 추가적으로 필요한 Firebase SDK를 여기에 추가
+    // 예를 들어 Firebase Authentication을 추가하려면:
+    implementation 'com.google.firebase:firebase-auth'
+
+    // Firestore 추가:
+    // implementation 'com.google.firebase:firebase-firestore'
+
+    // 기타 필요한 Firebase 의존성들을 추가할 수 있습니다.
 }
