--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,14 +1,21 @@
+plugins {
+    // ... 다른 플러그인들
+    id 'com.google.gms.google-services' version '4.4.2' apply false  // Google 서비스 Gradle 플러그인 추가
+}
+
 allprojects {
     repositories {
-        google()
+        google()  // 구글 저장소 추가
         mavenCentral()
     }
 }
 
 rootProject.buildDir = "../build"
+
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
 }
+
 subprojects {
     project.evaluationDependsOn(":app")
 }
@@ -16,3 +23,4 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+
