--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.13.0
-  table_calendar: ^3.0.9
+  http: ^1.2.2
   url_launcher: ^6.0.20
   flutter_native_splash: ^2.4.2
+  firebase_core: ^3.8.0
+  firebase_auth: ^5.3.3
+  google_sign_in: ^6.2.2
+  flutter_facebook_auth: ^7.1.1
+  table_calendar: ^3.0.9
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
