--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,7 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   assets:
-    - assets/
+    - assets/img/save_earth.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
